fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1306,13 +1306,11 @@ input, select, textarea {
 	}
 
 	body {
-		background-image: url("images/overlayy.png"), url("images/bg.jpg");
+		background-image: url("images/overlay.png"), url("images/bg.jpg");
 		background-repeat: repeat, no-repeat;
-		background-size: cover;
+		background-size: auto, 100% 100%;
 		background-attachment: fixed;
 		overflow-y: scroll;
-		margin: 0;
-		padding: 0;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
